@@ -27,7 +27,7 @@
 <?php echo $form->open(FILENAME_ACCOUNT_NEWSLETTERS, "action=process", true, array('onsubmit'=>null)) ?>
     <fieldset>
         <legend><?php _vzm("Store Newsletter") ?></legend>
-        <p><input type="checkbox" id="newsletter_general" name="newsletter_general" value="1"<?php $form->checked($currentAccount->isNewsletterSubscriber(), true) ?> /><label for="newsletter_general"><?php _vzm("Receive Store Newsletter") ?></label></p>
+        <p><input type="checkbox" id="newsletter_general" name="newsletter_general" value="1"<?php $form->checked(true, $currentAccount->isNewsletterSubscriber(), true) ?> /><label for="newsletter_general"><?php _vzm("Receive Store Newsletter") ?></label></p>
     </fieldset>
     <div class="btn"><input type="submit" class="btn" value="<?php _vzm("Update") ?>" /></div>
 </form>
